--- a/Manipulacao_de_Dados_Ex_01.ipynb
+++ b/Manipulacao_de_Dados_Ex_01.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -47,8 +47,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.2.4)\n",
-      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (1.20.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (1.20.2)\n",
       "Requirement already satisfied: pytz>=2017.3 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2021.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n"
      ]
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -223,7 +223,7 @@
        "[943 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -495,24 +495,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "user_id       943\n",
-       "age           943\n",
-       "gender        943\n",
-       "occupation    943\n",
-       "zip_code      943\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existem 21 ocupações diferentes no quadro de dados users\n"
+     ]
     }
    ],
    "source": [
     "# Seu código\n",
-    "users.count()"
+    "print(f'Existem {users[\"occupation\"].nunique()} ocupações diferentes no quadro de dados users')"
    ]
   },
   {
@@ -527,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -535,22 +527,22 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrameGroupBy' object has no attribute 'loc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-d274eb5c87e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Seu código\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'A ocupação mais frequente é:\\n{users.groupby([\"occupation\"]).loc[0]}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    750\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    751\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 752\u001b[1;33m         raise AttributeError(\n\u001b[0m\u001b[0;32m    753\u001b[0m             \u001b[1;34mf\"'{type(self).__name__}' object has no attribute '{attr}'\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    754\u001b[0m         )\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'loc'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'student': 196, 'other': 105, 'educator': 95, 'administrator': 79, 'engineer': 67, 'programmer': 66, 'librarian': 51, 'writer': 45, 'executive': 32, 'scientist': 31, 'artist': 28, 'technician': 27, 'marketing': 26, 'entertainment': 18, 'healthcare': 16, 'retired': 14, 'lawyer': 12, 'salesman': 12, 'none': 9, 'homemaker': 7, 'doctor': 7})\n",
+      "\n",
+      "A ocupação mais frequente é:\n",
+      "student\n"
      ]
     }
    ],
    "source": [
     "# Seu código\n",
-    "print(f\"A linha do ano em que houve o maior número de assasinatos é:\\n{users.sort_values(by='Murder').iloc[-1]}\")\n",
-    "print(f'A ocupação mais frequente é:\\n{users.groupby([\"occupation\"])}')"
+    "import collections\n",
+    "print(collections.Counter(users['occupation']))\n",
+    "\n",
+    "print(f\"\\nA ocupação mais frequente é:\\n{sorted(users['occupation'], key=users['occupation'].nunique)[-1]}\")\n"
    ]
   },
   {
@@ -565,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -597,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -686,7 +678,7 @@
        "max    943.000000   73.000000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
