--- a/Manipulacao_de_Dados_Ex_02.ipynb
+++ b/Manipulacao_de_Dados_Ex_02.ipynb
@@ -57,10 +57,18 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.2.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2021.1)\n",
-      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (1.20.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: numpy>=1.16.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (1.20.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2021.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.0.1; however, version 21.1 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\013590702275\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     }
    ],
@@ -3200,7 +3208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -3218,7 +3226,8 @@
    ],
    "source": [
     "# Seu código\n",
-    "print(f\"O número de assassinatos do ano em que foi registrado o menor número de roubo de carros é:\\n{crime.sort_values(by='Vehicle_Theft').iloc[0]['Murder']}\")"
+    "print(\"O número de assassinatos do ano em que foi registrado o menor número de roubo de carros é:\")\n",
+    "print(f\"{crime.sort_values(by='Vehicle_Theft').iloc[0]['Murder']}\")"
    ]
   },
   {
